# si_assignment

./: README.md  medical_dataset_entry.json  pyproject.toml
src/si_project/: crew.py  main.py
src/si_project/config/: agents.yaml  tasks.yaml
src/si_project/tools/: icd_tool.py
