[project]
name = "si_project"
version = "0.1.0"
description = "SI_PROJECT using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
si_project = "si_project.main:run"
run_crew = "si_project.main:run"
train = "si_project.main:train"
replay = "si_project.main:replay"
test = "si_project.main:test"
run_with_trigger = "si_project.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
